=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Changed: Added $GEDCOM global missed out in SVN 3050 (windmillway)
 - Fixed: RSS feeds/random media bug.  RSS duplicate include files.  (fisharebest)
 - Changed: Show persons name as Lightbox title (instead of file) name when viewing various Charts (windmillway)
 - Fixed: [ 1961705 ] Pedigree chart in portrait despite pref setting (canajun2eh)
 - Fixed: [ 1961288 ] [4.1.5] indi page tab script error if lightbox module not installed (windmillway)
 - Fixed: [ 1953273 ] [4.1.5] Research Assistant code parse errors (andrew_scss)
 - Added: Built-in generation of Google Analytics tracking code (fisharebest)
 - Added: Allow _BRTM and other events as substitutes for BIRT/MARR/DIV/DEAT
 - Fixed: [ 1953881 ] 4.1.5rel ... FAm events not showing in Personal facts tab (fisharebest)
 - Fixed: Charts block needs horizontal scroll bar (canajun2eh)
 - Fixed: [ 1958447 ] 4.1.5 "On This Day" block needs simple message (canajun2eh)
 - Added: New block to display _TODO items (fisharebest)
 - Fixed: [ 1947080 ] mediafirewall - fix auto-generated .htaccess file when PGV is in the root directory
 - Changed: Show highlight and thumbnail Media options only to Admin users (canajun2eh)
 - Fixed: [ 1956830 ] (unknown) when name exists 
 - Fixed: [ 1954862 ] [4.1.5] Search engine visit errors (fisharebest)
 - Fixed: Place Hierarchy: Small change to align "bubble" background for themes Simplygreen, Simplyblue and Simplyred. (windmillway)
 - Fixed: Lightbox: Various CSS errors corrected (windmillway)
 - Fixed: [ 1955259 ] Pedigree Link from Tree shows without detail by default (canajun2eh)
 - Fixed: [ 1952553 ] SVN 2931 - Related facts - wrong titles of events on INDI (canajun2eh)